Fix dark mode I think.

--- a/src/client/root/layout.module.css
+++ b/src/client/root/layout.module.css
@@ -5,7 +5,7 @@
   color: black;
 }
 
-.darkMode {
+.main.darkMode {
   background-color: black;
   color: white;
 }
